# toffee

./: Cargo.toml  README.md
crates/desktop-entry/: Cargo.toml
crates/desktop-entry/src/: desktop_entry.rs  file.rs  lib.rs  main.rs  parser.rs  parser_util.rs
crates/desktop-file/: Cargo.toml
crates/desktop-file-cli/: Cargo.toml
crates/desktop-file-cli/src/: desktop_entry.rs  get.rs  main.rs
crates/desktop-file/src/: define_group.rs  desktop_entry.rs  lib.rs  main.rs  parser.rs
src/: config.rs  main.rs  mode.rs  toffee.rs  ui.rs
src/backends/: drun.rs  mod.rs
src/backends/emoji/: emoji_label.rs  mod.rs
src/modes/: drun.rs  mod.rs
