[package]
name = "toffee"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/desktop-file", "crates/desktop-file-cli"]

[dependencies]
eframe = "0.25.0"
desktop-file = { path = "crates/desktop-file" }
log = "0.4.20"
env_logger = "0.10.1"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
color-eyre = "0.6.2"
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["svg", "file"] }
itertools = "0.12.0"
